--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -47,6 +47,10 @@ $panelWidth:180px;
                         border: $borderWidthDemo dashed $mutedBaseColor;
                 }
         }
+
+        .range-slider__range {
+                width: 6rem;
+        }
 }
 
 .setting-panel.hide {
