--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -202,7 +202,7 @@ table,
                 // cursor: default;
         }
 
-        .radio-wrapper .label,
+        .dui-radio .label,
         .checkbox label,
         i,
         .overlay-menu-toggler,
