--- a/components/container/_code-block.scss
+++ b/components/container/_code-block.scss
@@ -8,15 +8,47 @@
         pre {
                 background-color: transparent;
 
-                // TODO:  Override Prism colors with classification colors
                 code {
                         text-shadow: 0 .5px $baseColor;
                         display: block;
-                        color: gray; //TODO: Dynamic (comment in code) 
-                        // white-space: pre;
+                        color: $mutedBaseColor;
                         white-space: pre-wrap;
                         white-space: -moz-pre-wrap;
                         white-space: -o-pre-wrap;
                 }
+        }
+
+        .token.atrule,
+        .token.attr-value,
+        .token.keyword {
+                color: $highlightColor;
+        }
+
+        // override Prism colors with classification colors
+        .token.attr-name,
+        .token.builtin,
+        .token.char,
+        .token.inserted,
+        .token.selector,
+        .token.string {
+                color: $colorfull1;
+        }
+
+        .token.important,
+        .token.regex,
+        .token.variable {
+                color: $colorfull2;
+        }
+
+        .token.class-name,
+        .token.function {
+                color: $colorfull3;
+        }
+
+        .token.cdata,
+        .token.comment,
+        .token.doctype,
+        .token.prolog {
+                color: $mutedBaseColor;
         }
 }
