--- a/components/container/_code-block.scss
+++ b/components/container/_code-block.scss
@@ -2,7 +2,7 @@
         font-style: italic;
         // padding: 7px;
         margin: 10px 0 40px;
-        font-size: 1rem;
+        font-size: .93rem;
         border-radius: $borderRadius;
 
         pre {
