--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -569,7 +569,7 @@ Init values for dynamic properties to reduce  page load time
 .code-block {
   font-style: italic;
   margin: 10px 0 40px;
-  font-size: 1rem;
+  font-size: .93rem;
   border-radius: 9px;
 }
 
@@ -659,7 +659,6 @@ Init values for dynamic properties to reduce  page load time
   transition: -webkit-transform .2s ease-out;
   transition: transform .2s ease-out;
   transition: transform .2s ease-out, -webkit-transform .2s ease-out;
-  font-style: italic;
   border-radius: 9px;
   padding: 5px 15px;
 }
@@ -853,6 +852,66 @@ Init values for dynamic properties to reduce  page load time
 .toggle .toggle-state:checked ~ .indicator {
   -webkit-transform: translate3d(25%, 0, 0);
           transform: translate3d(25%, 0, 0);
+}
+
+.checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.checkbox label {
+  width: 1.4rem;
+  height: 1.4rem;
+  cursor: pointer;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.checkbox input {
+  display: none;
+}
+
+.checkbox .name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.1rem;
+  margin-left: 0.35rem;
+  margin-right: 0.8rem;
+  margin-bottom: 0rem;
+}
+
+.checkbox i {
+  width: 100%;
+  height: 100%;
+  font-weight: 700;
+  font-size: 0.9rem;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 /*-------------------------
