--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -82,6 +82,7 @@ $panelWidth:180px;
                 height: 250px;
                 zoom: 0.15;
                 border-radius: 60px;
+                border: $mutedBaseColor 2px solid;
                 cursor: pointer;
         }
 }
