Add inner background option (for content container)

--- a/scss/init/_flat.scss
+++ b/scss/init/_flat.scss
@@ -59,7 +59,7 @@ $contrastHighlightColor: #EBEBEB;
                 color: $baseColor;
         }
 
-        .display-content>.container,
+        .display-content>.container.background-0,
         .range-slider__range,
         .range-slider__value,
         .modal-content {
