--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1151,7 +1151,7 @@ Init values for dynamic properties to reduce  page load time
 */
 /* FONT */
 .section,
-.display-content > .container,
+.display-content > .container.background-0,
 body,
 .box-border,
 .segmented-control,
@@ -1488,7 +1488,7 @@ Init values for dynamic properties to reduce  page load time
 }
 
 .neu-style .section,
-.neu-style .display-content > .container,
+.neu-style .display-content > .container.background-0,
 .neu-style .button,
 .neu-style .setting-button,
 .neu-style .setting-button a,
@@ -1601,7 +1601,7 @@ Init values for dynamic properties to reduce  page load time
   color: black;
 }
 
-.flat-style .display-content > .container,
+.flat-style .display-content > .container.background-0,
 .flat-style .range-slider__range,
 .flat-style .range-slider__value,
 .flat-style .modal-content {
@@ -1690,7 +1690,7 @@ Init values for dynamic properties to reduce  page load time
   border: 1px solid rgba(209, 213, 219, 0.6);
 }
 
-.glass-style .display-content > .container,
+.glass-style .display-content > .container.background-0,
 .glass-style .range-slider__range,
 .glass-style .range-slider__value,
 .glass-style .modal-content {
