--- a/scss/base/_background.scss
+++ b/scss/base/_background.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
+// @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap') repeat scroll 0 0 rgba(0, 0, 0, 0);
+
 body {
 
         .background-0,
@@ -36,6 +38,32 @@ body {
                 animation: gradient 15s ease infinite;
         }
 
+        .background-4,
+        &.background-4,
+        #background-4 {
+                background-color: #000000;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='%23000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='%23180d1c' cx='400' cy='400' r='500'/%3E%3Ccircle fill='%23261431' cx='400' cy='400' r='400'/%3E%3Ccircle fill='%23351947' cx='400' cy='400' r='300'/%3E%3Ccircle fill='%23451e5e' cx='400' cy='400' r='200'/%3E%3Ccircle fill='%23552277' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
+                background-attachment: fixed;
+                background-size: cover;
+        }
+
+        .background-5,
+        &.background-5,
+        #background-5 {
+                background-color: #000000;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Ccircle stroke='%23D60' vector-effect='non-scaling-stroke' id='a' fill='none' stroke-width='5' r='315'/%3E%3Cuse id='f' href='%23a' stroke-dasharray='100 100 100 9999'/%3E%3Cuse id='b' href='%23a' stroke-dasharray='250 250 250 250 250 9999'/%3E%3Cuse id='e' href='%23a' stroke-dasharray='1000 500 1000 500 9999'/%3E%3Cuse id='g' href='%23a' stroke-dasharray='1500 9999'/%3E%3Cuse id='h' href='%23a' stroke-dasharray='2000 500 500 9999'/%3E%3Cuse id='j' href='%23a' stroke-dasharray='800 800 800 800 800 9999'/%3E%3Cuse id='k' href='%23a' stroke-dasharray='1200 1200 1200 1200 1200 9999'/%3E%3Cuse id='l' href='%23a' stroke-dasharray='1600 1600 1600 1600 1600 9999'/%3E%3C/defs%3E%3Cg transform='translate(1000 750)' %3E%3Cg transform='rotate(0 0 0)' %3E%3Ccircle fill='%23D60' r='10'/%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23f' transform='scale(.1) rotate(50 0 0)' /%3E%3Cuse href='%23f' transform='scale(.2) rotate(100 0 0)' /%3E%3Cuse href='%23f' transform='scale(.3) rotate(150 0 0)' /%3E%3C/g%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23b' transform='scale(.4) rotate(200 0 0)' /%3E%3Cuse href='%23z' transform='scale(.5) rotate(250 0 0)' /%3E%3C/g%3E%3Cg id='z' transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23b'/%3E%3Cuse href='%23b' transform='scale(1.2) rotate(90 0 0)' /%3E%3Cuse href='%23b' transform='scale(1.4) rotate(60 0 0)' /%3E%3Cuse href='%23e' transform='scale(1.6) rotate(120 0 0)' /%3E%3Cuse href='%23e' transform='scale(1.8) rotate(30 0 0)' /%3E%3C/g%3E%3C/g%3E%3Cg id='y' transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23e' transform='scale(1.1) rotate(20 0 0)' /%3E%3Cuse href='%23g' transform='scale(1.3) rotate(-40 0 0)' /%3E%3Cuse href='%23g' transform='scale(1.5) rotate(60 0 0)' /%3E%3Cuse href='%23h' transform='scale(1.7) rotate(-80 0 0)' /%3E%3Cuse href='%23j' transform='scale(1.9) rotate(100 0 0)' /%3E%3C/g%3E%3C/g%3E%3Cg transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23h' transform='scale(2) rotate(60 0 0)'/%3E%3Cuse href='%23j' transform='scale(2.1) rotate(120 0 0)'/%3E%3Cuse href='%23j' transform='scale(2.3) rotate(180 0 0)'/%3E%3Cuse href='%23h' transform='scale(2.4) rotate(240 0 0)'/%3E%3Cuse href='%23j' transform='scale(2.5) rotate(300 0 0)'/%3E%3C/g%3E%3Cuse href='%23y' transform='scale(2) rotate(180 0 0)' /%3E%3Cuse href='%23j' transform='scale(2.7)'/%3E%3Cuse href='%23j' transform='scale(2.8) rotate(45 0 0)'/%3E%3Cuse href='%23j' transform='scale(2.9) rotate(90 0 0)'/%3E%3Cuse href='%23k' transform='scale(3.1) rotate(135 0 0)'/%3E%3Cuse href='%23k' transform='scale(3.2) rotate(180 0 0)'/%3E%3C/g%3E%3Cuse href='%23k' transform='scale(3.3) rotate(225 0 0)'/%3E%3Cuse href='%23k' transform='scale(3.5) rotate(270 0 0)'/%3E%3Cuse href='%23k' transform='scale(3.6) rotate(315 0 0)'/%3E%3Cuse href='%23k' transform='scale(3.7)'/%3E%3Cuse href='%23k' transform='scale(3.9) rotate(75 0 0)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+                background-size: cover;
+        }
+
+        .background-6,
+        &.background-6,
+        #background-6 {
+                background-color: #000022;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='2000' height='2000' viewBox='0 0 800 800'%3E%3Cg fill='none' %3E%3Cg stroke='%23026' stroke-width='17'%3E%3Cline x1='-8' y1='-8' x2='808' y2='808'/%3E%3Cline x1='-8' y1='792' x2='808' y2='1608'/%3E%3Cline x1='-8' y1='-808' x2='808' y2='8'/%3E%3C/g%3E%3Cg stroke='%23002163' stroke-width='16'%3E%3Cline x1='-8' y1='767' x2='808' y2='1583'/%3E%3Cline x1='-8' y1='17' x2='808' y2='833'/%3E%3Cline x1='-8' y1='-33' x2='808' y2='783'/%3E%3Cline x1='-8' y1='-783' x2='808' y2='33'/%3E%3C/g%3E%3Cg stroke='%23002060' stroke-width='15'%3E%3Cline x1='-8' y1='742' x2='808' y2='1558'/%3E%3Cline x1='-8' y1='42' x2='808' y2='858'/%3E%3Cline x1='-8' y1='-58' x2='808' y2='758'/%3E%3Cline x1='-8' y1='-758' x2='808' y2='58'/%3E%3C/g%3E%3Cg stroke='%23001f5c' stroke-width='14'%3E%3Cline x1='-8' y1='67' x2='808' y2='883'/%3E%3Cline x1='-8' y1='717' x2='808' y2='1533'/%3E%3Cline x1='-8' y1='-733' x2='808' y2='83'/%3E%3Cline x1='-8' y1='-83' x2='808' y2='733'/%3E%3C/g%3E%3Cg stroke='%23001e59' stroke-width='13'%3E%3Cline x1='-8' y1='92' x2='808' y2='908'/%3E%3Cline x1='-8' y1='692' x2='808' y2='1508'/%3E%3Cline x1='-8' y1='-108' x2='808' y2='708'/%3E%3Cline x1='-8' y1='-708' x2='808' y2='108'/%3E%3C/g%3E%3Cg stroke='%23001d56' stroke-width='12'%3E%3Cline x1='-8' y1='667' x2='808' y2='1483'/%3E%3Cline x1='-8' y1='117' x2='808' y2='933'/%3E%3Cline x1='-8' y1='-133' x2='808' y2='683'/%3E%3Cline x1='-8' y1='-683' x2='808' y2='133'/%3E%3C/g%3E%3Cg stroke='%23001c53' stroke-width='11'%3E%3Cline x1='-8' y1='642' x2='808' y2='1458'/%3E%3Cline x1='-8' y1='142' x2='808' y2='958'/%3E%3Cline x1='-8' y1='-158' x2='808' y2='658'/%3E%3Cline x1='-8' y1='-658' x2='808' y2='158'/%3E%3C/g%3E%3Cg stroke='%23001b4f' stroke-width='10'%3E%3Cline x1='-8' y1='167' x2='808' y2='983'/%3E%3Cline x1='-8' y1='617' x2='808' y2='1433'/%3E%3Cline x1='-8' y1='-633' x2='808' y2='183'/%3E%3Cline x1='-8' y1='-183' x2='808' y2='633'/%3E%3C/g%3E%3Cg stroke='%23001a4c' stroke-width='9'%3E%3Cline x1='-8' y1='592' x2='808' y2='1408'/%3E%3Cline x1='-8' y1='192' x2='808' y2='1008'/%3E%3Cline x1='-8' y1='-608' x2='808' y2='208'/%3E%3Cline x1='-8' y1='-208' x2='808' y2='608'/%3E%3C/g%3E%3Cg stroke='%23001949' stroke-width='8'%3E%3Cline x1='-8' y1='567' x2='808' y2='1383'/%3E%3Cline x1='-8' y1='217' x2='808' y2='1033'/%3E%3Cline x1='-8' y1='-233' x2='808' y2='583'/%3E%3Cline x1='-8' y1='-583' x2='808' y2='233'/%3E%3C/g%3E%3Cg stroke='%23001846' stroke-width='7'%3E%3Cline x1='-8' y1='242' x2='808' y2='1058'/%3E%3Cline x1='-8' y1='542' x2='808' y2='1358'/%3E%3Cline x1='-8' y1='-558' x2='808' y2='258'/%3E%3Cline x1='-8' y1='-258' x2='808' y2='558'/%3E%3C/g%3E%3Cg stroke='%23001743' stroke-width='6'%3E%3Cline x1='-8' y1='267' x2='808' y2='1083'/%3E%3Cline x1='-8' y1='517' x2='808' y2='1333'/%3E%3Cline x1='-8' y1='-533' x2='808' y2='283'/%3E%3Cline x1='-8' y1='-283' x2='808' y2='533'/%3E%3C/g%3E%3Cg stroke='%2300163f' stroke-width='5'%3E%3Cline x1='-8' y1='292' x2='808' y2='1108'/%3E%3Cline x1='-8' y1='492' x2='808' y2='1308'/%3E%3Cline x1='-8' y1='-308' x2='808' y2='508'/%3E%3Cline x1='-8' y1='-508' x2='808' y2='308'/%3E%3C/g%3E%3Cg stroke='%2300153c' stroke-width='4'%3E%3Cline x1='-8' y1='467' x2='808' y2='1283'/%3E%3Cline x1='-8' y1='317' x2='808' y2='1133'/%3E%3Cline x1='-8' y1='-333' x2='808' y2='483'/%3E%3Cline x1='-8' y1='-483' x2='808' y2='333'/%3E%3C/g%3E%3Cg stroke='%23001439' stroke-width='3'%3E%3Cline x1='-8' y1='342' x2='808' y2='1158'/%3E%3Cline x1='-8' y1='442' x2='808' y2='1258'/%3E%3Cline x1='-8' y1='-458' x2='808' y2='358'/%3E%3Cline x1='-8' y1='-358' x2='808' y2='458'/%3E%3C/g%3E%3Cg stroke='%23001336' stroke-width='2'%3E%3Cline x1='-8' y1='367' x2='808' y2='1183'/%3E%3Cline x1='-8' y1='417' x2='808' y2='1233'/%3E%3Cline x1='-8' y1='-433' x2='808' y2='383'/%3E%3Cline x1='-8' y1='-383' x2='808' y2='433'/%3E%3C/g%3E%3Cg stroke='%23013' stroke-width='1'%3E%3Cline x1='-8' y1='392' x2='808' y2='1208'/%3E%3Cline x1='-8' y1='-408' x2='808' y2='408'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        }
+
         @keyframes gradient {
                 0% {
                         background-position: 0% 50%;
@@ -49,4 +77,232 @@ body {
                         background-position: 0% 50%;
                 }
         }
+
+        // BACKGROUND 7
+        .background-7,
+        &.background-7,
+        #background-7 {
+                --s: 25vmin;
+                --p: calc(var(--s) / 2);
+                --c1: pink;
+                --c2: dodgerblue;
+                --c3: white;
+                --bg: var(--c3);
+                --d: 4000ms;
+                --e: cubic-bezier(0.76, 0, 0.24, 1);
+
+                background-color: var(--bg);
+                background-image:
+                        linear-gradient(45deg, var(--c1) 25%, transparent 25%),
+                        linear-gradient(-45deg, var(--c1) 25%, transparent 25%),
+                        linear-gradient(45deg, transparent 75%, var(--c2) 75%),
+                        linear-gradient(-45deg, transparent 75%, var(--c2) 75%);
+                background-size: var(--s) var(--s);
+                background-position:
+                        calc(var(--p) * 1) calc(var(--p) * 0),
+                        calc(var(--p) * -1) calc(var(--p) * 1),
+                        calc(var(--p) * 1) calc(var(--p) * -1),
+                        calc(var(--p) * -1) calc(var(--p) * 0);
+                animation:
+                        color var(--d) var(--e) infinite,
+                        position var(--d) var(--e) infinite;
+        }
+
+        @keyframes color {
+
+                0%,
+                25% {
+                        --bg: var(--c3);
+                }
+
+                26%,
+                50% {
+                        --bg: var(--c1);
+                }
+
+                51%,
+                75% {
+                        --bg: var(--c3);
+                }
+
+                76%,
+                100% {
+                        --bg: var(--c2);
+                }
+        }
+
+        @keyframes position {
+                0% {
+                        background-position:
+                                calc(var(--p) * 1) calc(var(--p) * 0),
+                                calc(var(--p) * -1) calc(var(--p) * 1),
+                                calc(var(--p) * 1) calc(var(--p) * -1),
+                                calc(var(--p) * -1) calc(var(--p) * 0);
+                }
+
+                25% {
+                        background-position:
+                                calc(var(--p) * 1) calc(var(--p) * 4),
+                                calc(var(--p) * -1) calc(var(--p) * 5),
+                                calc(var(--p) * 1) calc(var(--p) * 3),
+                                calc(var(--p) * -1) calc(var(--p) * 4);
+                }
+
+                50% {
+                        background-position:
+                                calc(var(--p) * 3) calc(var(--p) * 8),
+                                calc(var(--p) * -3) calc(var(--p) * 9),
+                                calc(var(--p) * 2) calc(var(--p) * 7),
+                                calc(var(--p) * -2) calc(var(--p) * 8);
+                }
+
+                75% {
+                        background-position:
+                                calc(var(--p) * 3) calc(var(--p) * 12),
+                                calc(var(--p) * -3) calc(var(--p) * 13),
+                                calc(var(--p) * 2) calc(var(--p) * 11),
+                                calc(var(--p) * -2) calc(var(--p) * 12);
+                }
+
+                100% {
+                        background-position:
+                                calc(var(--p) * 5) calc(var(--p) * 16),
+                                calc(var(--p) * -5) calc(var(--p) * 17),
+                                calc(var(--p) * 5) calc(var(--p) * 15),
+                                calc(var(--p) * -5) calc(var(--p) * 16);
+                }
+        }
+
+        // BACKGROUND 8 
+
+        .background-8,
+        &.background-8,
+        #background-8 {
+                background-color: #111111;
+                margin: 0;
+                overflow-x: hidden;
+        }
+
+        @mixin fit-whole-page {
+                position: absolute;
+                top: 70%;
+                left: 0%;
+                right: 0%;
+                // bottom: 0%;
+                width: 100%;
+                height: 45vh;
+        }
+
+        .code-block {
+                z-index: 99;
+        }
+
+        .overlay-bg {
+                @include fit-whole-page();
+                // background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
+                // background-repeat: repeat;
+                // animation: bg-animation .2s infinite;
+                opacity: .4;
+                visibility: visible;
+                z-index: 0;
+        }
+
+        .overlay-bg.background-2 {
+                position: absolute;
+                top: 0%;
+                left: -50%;
+                right: -50%;
+                // bottom: 0%;
+                width: 100%;
+                height: 25vh;
+                opacity: .9;
+                visibility: visible;
+                z-index: -1;
+                transform: rotate(45deg);
+                /* Equal to rotateZ(45deg) */
+
+        }
+
+        .display-content>.container {
+                z-index: -3;
+        }
+
+
+        @keyframes bg-animation {
+                0% {
+                        transform: translate(0, 0)
+                }
+
+                10% {
+                        transform: translate(-5%, -5%)
+                }
+
+                20% {
+                        transform: translate(-10%, 5%)
+                }
+
+                30% {
+                        transform: translate(5%, -10%)
+                }
+
+                40% {
+                        transform: translate(-5%, 15%)
+                }
+
+                50% {
+                        transform: translate(-10%, 5%)
+                }
+
+                60% {
+                        transform: translate(15%, 0)
+                }
+
+                70% {
+                        transform: translate(0, 10%)
+                }
+
+                80% {
+                        transform: translate(-15%, 0)
+                }
+
+                90% {
+                        transform: translate(10%, 5%)
+                }
+
+                100% {
+                        transform: translate(5%, 0)
+                }
+        }
+
+
+        // BACKGROUND 9 
+        .background-9,
+        &.background-9,
+        #background-9 {
+                animation: scroll 70s linear infinite;
+                background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80"), #111111;
+                color: #eee;
+                // height: 100vh;
+                // min-width: 360px;
+                // width: 100%;
+                // display: flex;
+                // justify-content: center;
+                // align-items: center;
+                // perspective: 1000px;
+                // perspective-origin: 50% 50%;
+
+        }
+
+        @keyframes scroll {
+                100% {
+                        background-position: 0px -3000px;
+                }
+        }
+
+        @media (prefers-reduced-motion) {
+                .wrapper {
+                        animation: scroll 200s linear infinite;
+                }
+        }
+
 }
