--- a/scss/styles/_glass.scss
+++ b/scss/styles/_glass.scss
@@ -51,6 +51,9 @@
         .setting-button-border {
                 backdrop-filter: none;
                 -webkit-backdrop-filter: none;
+        }
+
+        .button-border {
                 background: transparent !important;
         }
 
