--- a/scss/utils.scss
+++ b/scss/utils.scss
@@ -1,4 +1,4 @@
-//content: text, i...
+//content: text, i....
 @mixin center_content_in_div() {
         display: flex;
         justify-content: center;
