[Refactor] Split background CSS with meaningful names

--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -3,7 +3,7 @@
 
 
 .section,
-.display-content>.container.background-0,
+.display-content>.container.none-bg,
 body,
 .box-border,
 .segmented-control,
