--- a/scss/init/_neu.scss
+++ b/scss/init/_neu.scss
@@ -137,7 +137,7 @@ inset #{$distanceX}px #{$distanceY}px #{$blur}px #{$spread}px #{$lightenSchemeCo
         }
 
         .section,
-        .display-content>.container.background-0,
+        .display-content>.container.none-bg,
         .button,
         .setting-button,
         .setting-button a,
