[Refactor] Convert DynamicUI to class

--- a/backgrounds/_animated-gradient-bg.scss
+++ b/backgrounds/_animated-gradient-bg.scss
@@ -4,7 +4,8 @@
 
 .animated-gradient-bg {
         background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 400% 400%;
+        background-size: 400% 600%;
+        // background-size: cover;
         animation: gradient 15s ease infinite;
 }
 
