--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -1,7 +1,4 @@
-// TODO: Separate this file to each component file
-@import "../base/_variables";
-
-
+// TODO: Separate this file to each component type
 .section,
 .display-content>.container.none-bg,
 body,
