--- a/scss/dynamic-style.scss
+++ b/scss/dynamic-style.scss
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import "variables";
+@import "mixins";
 @import "setting";
 @import "base/index";
 @import "../components/basic/index";
