--- a/scss/init/_neu.scss
+++ b/scss/init/_neu.scss
@@ -1,5 +1,3 @@
-@import "../base/_variables";
-
 //TODO: Init border and surface
 
 $distanceX:3;
@@ -15,6 +13,7 @@ $dropBoxShadow : #{$distanceX}px #{$distanceY}px #{$blur}px #{$spread}px #{$dark
 $insetBoxShadow : inset #{$distanceX}px #{$distanceY}px #{$blur}px #{$spread}px #{$darkenSchemeColor},
 inset -#{$distanceX}px -#{$distanceY}px #{$blur}px #{$spread}px #{$lightenSchemeColor};
 
+// #{$concaveBoxShadow}; //refer like this to unquote
 $concaveBoxShadow:"#{$dropBoxShadow},  #{$insetBoxShadow}";
 
 $thumbScrollbarBoxShadow:inset -#{$distanceX}px -#{$distanceY}px #{$blur}px #{$spread}px #{$darkenSchemeColor},
